# ArUco_Controller

ArUco/ArUco_Controller/: CMakeLists.txt  README.md  package.xml
ArUco/ArUco_Controller/include/: aruco_controller.h
ArUco/ArUco_Controller/launch/: ArUco_Controller.launch
ArUco/ArUco_Controller/src/: aruco_controller.cpp  aruco_controller_Node.cpp
ArUco/ArUco_Functions/aruco_alignment/: CMakeLists.txt  README.md  package.xml
ArUco/ArUco_Functions/aruco_alignment/include/: aruco_alignment.h
ArUco/ArUco_Functions/aruco_alignment/launch/: aruco_alignment.launch
ArUco/ArUco_Functions/aruco_alignment/src/: aruco_alignment.cpp  aruco_alignment_Node.cpp
ArUco/ArUco_Functions/aruco_approaching/: CMakeLists.txt  README.md  package.xml
ArUco/ArUco_Functions/aruco_approaching/include/: aruco_approaching.h
ArUco/ArUco_Functions/aruco_approaching/launch/: aruco_approaching.launch
ArUco/ArUco_Functions/aruco_approaching/src/: aruco_approaching.cpp  aruco_approaching_Node.cpp
ArUco/ArUco_Functions/aruco_detection/: CMakeLists.txt  README.md  package.xml
ArUco/ArUco_Functions/aruco_detection/config/: C920_calibration.yaml  virtual_camera_calibration.yaml
ArUco/ArUco_Functions/aruco_detection/include/ArUco_Detection/: ArUco_Detection.h
ArUco/ArUco_Functions/aruco_detection/launch/: Aruco_Detection.launch  C920_USB_CAM.launch
ArUco/ArUco_Functions/aruco_detection/src/: ArUco_Detection.cpp  ArUco_Detection_Node.cpp
ArUco/ArUco_Functions/aruco_picking/: CMakeLists.txt  README.md  package.xml
ArUco/ArUco_Functions/aruco_picking/include/: aruco_picking.h
ArUco/ArUco_Functions/aruco_picking/launch/: aruco_picking.launch
ArUco/ArUco_Functions/aruco_picking/src/: aruco_picking.cpp  aruco_picking_Node.cpp
ArUco/ArUco_Functions/aruco_search/: CMakeLists.txt  README.md  package.xml
ArUco/ArUco_Functions/aruco_search/include/: aruco_search.h
ArUco/ArUco_Functions/aruco_search/launch/: aruco_search.launch
ArUco/ArUco_Functions/aruco_search/src/: aruco_search.cpp  aruco_search_Node.cpp
Planner/dynamic_planner/: CMakeLists.txt  package.xml
Planner/dynamic_planner/include/dynamic_planner/: dynamic_planner.h
Planner/dynamic_planner/src/: dynamic_planner.cpp  dynamic_planner_node.cpp
Planner/prbt_planner/: CMakeLists.txt  package.xml
Planner/prbt_planner/include/: prbt_planner.h
Planner/prbt_planner/launch/: prbt_planner.launch
Planner/prbt_planner/src/: prbt_planner.cpp  prbt_planner_Node.cpp
Planner/prbt_planner/srv/: ComputeEndEffectorPosition.srv  GetManipulatorInfo.srv  GetManipulatorLinkNames.srv  GetManipulatorTrajectory.srv  PlanCartesianSpace.srv  PlanJointSpace.srv  SetPlannerDynamics.srv  SetPlannerParameters.srv
Simulation/gazebo_simulation/: CMakeLists.txt  README.md  package.xml
Simulation/gazebo_simulation/launch/mpo_500/: mpo_500_+_Bridge.launch  mpo_500_gazebo.launch
Simulation/gazebo_simulation/launch/prbt/: prbt_+_Bridge.launch  prbt_gazebo.launch
Simulation/gazebo_simulation/launch/prbt/demo/: prbt_demo.launch
Simulation/gazebo_simulation/launch/rossini_platform/: rossini_+_Bridge.launch  rossini_gazebo.launch
Simulation/gazebo_simulation/launch/rossini_platform/ArUco_World/: ArUco_World_Simulation.launch  ArUco_world.launch  ArUco_world.world
Simulation/gazebo_simulation/launch/rossini_platform/Empty_World/: Empty_World_Simulation.launch
Simulation/gazebo_simulation/launch/rossini_platform/IMA_World/: IMA_World_Simulation.launch  IMA_world.launch  IMA_world.world
Simulation/gazebo_simulation/models/IMA/: IMA.mtl
Simulation/gazebo_simulation/models/cafe_table/: model-1_4.sdf  model.sdf
Simulation/gazebo_simulation/models/marker11/: model-1_4.sdf  model-1_5.sdf  model.sdf
Simulation/gazebo_simulation/models/marker11/materials/textures/: Marker11.png.old
Simulation/gazebo_simulation/robots/: mmo_500.urdf.xacro
Simulation/gazebo_simulation/robots/config/controller/: arm_controller_pilz.yaml  gazebo_pid_gains.yaml
Simulation/gazebo_simulation/robots/config/controller/launch/: controller_utils.launch
Simulation/gazebo_simulation/robots/config/mmo_500/scan_unifier/: mmo_500_scan_unifier.launch
Simulation/gazebo_simulation/robots/urdf/: camera.urdf  prbt_macro.xacro
Simulation/gazebo_simulation/robots/urdf/xacros/: cabinet.xacro  micro_scan.xacro  mpo_500_body.xacro  mpo_500_gazebo.xacro  omni_wheel.xacro
Utils/robot_bridge/: CMakeLists.txt  README.md  package.xml
Utils/robot_bridge/include/: Robot_Bridge.h  mpo_500_Bridge.h  prbt_Bridge.h
Utils/robot_bridge/launch/: Bridge.launch  moveit_planning_execution.launch  prbt_+_Bridge.launch
Utils/robot_bridge/msg/: geometry_trajectory_msg.msg  planned_trajectory_msg.msg
Utils/robot_bridge/src/: Robot_Bridge.cpp  Robot_Bridge_Node.cpp  mpo_500_Bridge.cpp  mpo_500_Bridge_Node.cpp  prbt_Bridge.cpp  prbt_Bridge_Node.cpp
Utils/useful_functions/: CMakeLists.txt  README.md  package.xml
Utils/useful_functions/include/: useful_functions.h
Utils/useful_functions/src/: useful_functions.cpp
