<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The gazebo_simulation package</description>

  <maintainer email="205878@studenti.unimore.it">Davide Ferrari</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<exec_depend>roscpp</exec_depend>

	<build_depend>std_msgs</build_depend>
	<build_export_depend>std_msgs</build_export_depend> 
  <exec_depend>std_msgs</exec_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  
  <depend>timed_roslaunch</depend>
  <depend>robot_bridge</depend>
  <depend>prbt_moveit_config</depend>
  
  <export>
		<!-- gazebo_ros_paths_plugin automatically adds these to
		GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
		the package.xml file. You can than use URIs of type model://my_package/stuff. -->
		<gazebo_ros
		gazebo_plugin_path="${prefix}/lib"
		gazebo_model_path="${prefix}/models"/>
	</export>
	
</package>
