<?xml version="1.0"?>
<package format="2">
  <name>useful_functions</name>
  <version>0.0.1</version>
  <description>The useful_functions package</description>

  <maintainer email="205878@studenti.unimore.it">Davide Ferrari</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
    
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <exec_depend>eigen</exec_depend>

</package>
