<?xml version="1.0"?>
<package format="2">
  <name>aruco_approaching</name>
  <version>0.0.0</version>
  <description>The aruco_approaching package</description>

  <maintainer email="205878@studenti.unimore.it">Davide Ferrari</maintainer>

  <license>TODO</license>
  
  <depend>robot_bridge</depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>useful_functions</build_depend>
  <build_export_depend>useful_functions</build_export_depend>
  <exec_depend>useful_functions</exec_depend>
  
  <build_depend>dynamic_planner</build_depend>
  <build_export_depend>dynamic_planner</build_export_depend>
  <exec_depend>dynamic_planner</exec_depend>
  
  <build_depend>prbt_planner</build_depend>
  <build_export_depend>prbt_planner</build_export_depend>
  <exec_depend>prbt_planner</exec_depend>

</package>
