<?xml version="1.0"?>
<package format="2">
  <name>aruco_detection</name>
  <version>0.0.0</version>
  <description>The aruco_detection package</description>

  <maintainer email="205878@studenti.unimore.it">Davide Ferrari</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <build_depend>image_transport</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>image_transport</exec_depend>

  
</package>

